# discord-message-scraper

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  to_csv.py
.claude/: settings.local.json
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/implementation/: plan.md
docs/summarize/: broiler-data-analyst.md  broiler-sr-prediction.md  broiler-weight-prediction.md  knowledge-sharing.md  research-farm.md  กายไก.md  การจดการเลยงไกเนอ.md
src/: download_attachments.py  scrape.py  to_csv.py
src/discord_scraper/: __init__.py
src/discord_scraper/cli/: __init__.py
src/discord_scraper/cli/commands/: config_cmd.py  download.py  export.py  run.py  scrape.py
src/discord_scraper/core/: client.py  config.py  models.py  rate_limiter.py
src/discord_scraper/services/: downloader.py  exporter.py  scraper.py
src/discord_scraper/storage/: base.py  json_storage.py
src/discord_scraper/ui/: console.py  progress.py  tables.py
