[project]
name = "discord-scraper"
version = "0.2.0"
description = "Discord message scraper with CLI tooling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "rich>=13.0",
]

[project.scripts]
discord-scraper = "discord_scraper.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
